# shared-template

./: .dockerignore  .env.test  .gitignore  Dockerfile  README.md  coverage.xml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci-cd.yml  hello.yml  test.yml  tests.yml
alembic/: env.py
alembic/versions/: 81ae9e9e1d99_initial_tables.py
app/: main.py
app/api/: deps.py
app/api/v1/: health.py  user.py
app/core/: config.py  exceptions.py  handlers.py  log_config.py  logging.py  middleware.py
app/db/: __init__.py  base.py  migration.py  session.py
app/db/tables/: orders.py  users.py
app/models/: orders.py  users.py
app/services/: user_service.py
tests/: conftest.py
tests/integration/: test_user_api.py
tests/unit/: test_config.py  test_exceptions.py  test_middleware.py  test_user_service.py
